# netcdfcore

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/cnetcdf/: CMakeLists.txt  config-gen.h  config-gen.h.in  config.h
src/lib/fnetcdf/: CMakeLists.txt
